<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.florent37.arclayout.ArcLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:elevation="10dip"
            app:arc_cropDirection="cropOutside"
            app:arc_height="50dp"
            app:arc_position="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/kenBurn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        </com.github.florent37.arclayout.ArcLayout>


        <ImageView
            android:id="@+id/backDrop"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/nav_app_bar_navigate_up_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diagonalLayout" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/colorOnBackground"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backDrop"
            app:layout_constraintTop_toTopOf="@+id/backDrop"
            tools:text="MORTAL COMBAT" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/movieTitle"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle"
            tools:text="releaseDate" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/overview"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/backDrop"
            app:layout_constraintTop_toBottomOf="@+id/backDrop" />

        <TextView
            android:id="@+id/textOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="@string/overview" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:rating="2"
            android:stepSize="0.1"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="@+id/textPopularity"
            app:layout_constraintTop_toBottomOf="@+id/textPopularity" />

        <TextView
            android:id="@+id/textPopularity"
            android:layout_width="143dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:drawableStartCompat="@drawable/ic_fluent_point_scan_24_regular"
            app:drawableTint="@color/colorOnBackground"
            app:layout_constraintStart_toStartOf="@+id/releaseDate"
            app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

        <TextView
            android:id="@+id/voteCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:drawableStartCompat="@drawable/ic_fluent_vote_20_selector"
            app:drawableTint="@color/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <ImageView
            android:id="@+id/imgBrowser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_fluent_open_in_browser_24_selector"
            app:layout_constraintEnd_toStartOf="@+id/imgShare"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textOverview"
            app:tint="@color/md_green_400" />

        <ImageView
            android:id="@+id/imgShare"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_fluent_share_24_filled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgBrowser"
            app:layout_constraintTop_toTopOf="@+id/imgBrowser"
            app:tint="@color/md_green_400" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textPopularity"
            app:layout_constraintTop_toTopOf="@+id/textPopularity"
            app:tint="@color/md_green_400" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_browser"
            app:layout_constraintEnd_toEndOf="@+id/imgBrowser"
            app:layout_constraintStart_toStartOf="@+id/imgBrowser"
            app:layout_constraintTop_toBottomOf="@+id/imgBrowser" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="@+id/imgShare"
            app:layout_constraintStart_toStartOf="@+id/imgShare"
            app:layout_constraintTop_toBottomOf="@+id/imgShare" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>