<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/ic_fluent_movies_and_tv_24_selector"
        android:enabled="true"

        android:title="@string/movies" />

    <item
        android:id="@+id/nav_movies_tv"
        android:enabled="true"
        android:icon="@drawable/ic_fluent_tv_24_selector"
        android:title="@string/movie_tv" />
 <item
        android:id="@+id/nav_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />

</menu>